css/styles.css
/* ... */
/* Headings and font styles */

.h1lg {
  font-size: 10rem;
  line-height: 10rem;
  font-weight: bold;
}
.h1sm {
  font-size: 6.4rem;
  line-height: 5.6rem;
  font-weight: bold;
}
.h2heading {
  font-size: 4.8rem;
  line-height: 4.8rem;
  font-weight: bold;
}
.h3heading {
  font-size: 1.8rem;
  line-height: 2.8rem;
  font-weight: bold;
}
.plg {
  font-size: 1.8rem;
  line-height: 2.8rem;
  font-weight: 600;
}
.psm {
  font-size: 1.5rem;
  line-height: 2.5rem;
  font-weight: 600;
}
img {
  max-width: 100%;
  height: auto;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  clip: rect(0 0 0 0);
  overflow: hidden;
}

/* CONTAINER */
.container {
  max-width: 1210px;
  padding-left: 50px;
  padding-right: 50px;
  margin-left: auto;
  margin-right: auto;
}

.btn {
  display: inline-block;
  padding: 9px 33px 11px 32px;
  font-size: 18px;
  border: 2px solid #ffffff;
  border-radius: 24px;
  transition: all 0.3s;
}
.btn-light {
  background-color: var(--secondary-secramento-state-green);
  color: var(--primary-white);
}
.btn-light:hover {
  color: var(--secondary-secramento-state-green);
  background-color: var(--primary-white);
}
.btn-light:disabled {
  opacity: 0.8;
}
.btn-dark {
  border: 2px solid var(--secondary-secramento-state-green);
  color: var(--secondary-secramento-state-green);
  background-color: var(--primary-white);
}
.btn-dark:hover {
  background-color: var(--secondary-secramento-state-green);
  color: var(--primary-white);
}
.btn-dark:disabled {
  opacity: 0.8;
}
/* Hamburger */
.hamburger-menu {
  display: block;
  width: 50px;
  height: 50px;
  position: relative;
  display: none;
  z-index: 100;
}
.hamburger-menu .ham-span,
.hamburger-menu .ham-span::before,
.hamburger-menu .ham-span::after {
  position: absolute;
  top: 50%;
  margin-top: -1px;
  left: 50%;
  margin-left: -10px;
  width: 20px;
  height: 2px;
  background-color: var(--primary-white);
}
.hamburger-menu .ham-span::before,
.hamburger-menu .ham-span::after {
  content: " ";
  display: block;
  transition: 0.2s;
}
.hamburger-menu .ham-span::before {
  transform: translateY(-5px);
}
.hamburger-menu .ham-span::after {
  transform: translateY(5px);
}
/* for x = close */
.humburger-closed .ham-span {
  height: 0;
}
.humburger-closed .ham-span::before {
  transform: rotate(45deg);
}
.humburger-closed .ham-span::after {
  transform: rotate(-45deg);
}
/* Mobile nav */
.mobile-overlay {
}
.mobile-nav {
  background-image: url(/img/about-hero-circle.svg);
  background-repeat: no-repeat;
  background-position: bottom 0% right -100px;
  background-color: var(--secondary-police-blue);
  width: 62%;
  height: 100%;
  position: absolute;
  top: 0;
  right: -100%;
  z-index: 50;
  transition: all 0.6s;
}
.mobile-nav-wrapper {
  position: absolute;
  top: 17%;
  left: 48px;
}
.mobile-nav-list {
  list-style: none;
  padding-left: 0;
  margin: 0;
  margin-bottom: 36px;
}
.mobile-nav-item:not(:last-child) {
  margin-bottom: 24px;
}
.mobile-nav-link {
  color: var(--primary-white);
  text-decoration: none;
  font-size: 18px;
  line-height: 28px;
}
.mobile-contact-btn {
  text-decoration: none;
  background-color: transparent;
}
.mobile-nav-active {
  right: 0%;
}
/* Header */
.header {
  padding-top: 72px;
  padding-bottom: 30px;
}
.header-inner {
  display: flex;
  align-items: center;
}
.logo-wrapper {
  margin-right: 80px;
}
.logo-img {
  display: block;
  width: 169px;
  height: 49px;
}
.nav-list {
  display: flex;
  list-style: none;
  padding-left: 0;
  margin: 0;
}
.nav-item:not(:last-child) {
  margin-right: 40px;
}
.nav-link {
  font-weight: 600;
  font-size: 18px;
  line-height: 28px;
  text-decoration: none;
  color: var(--primary-white);
}
.nav-link:hover {
  color: var(--primary-light-coral);
}
.contacts-batton {
  margin-left: auto;
}
.hero-btn {
  text-decoration: none;
  background-color: var(--primary-midnight-green);
}
/* Main */
.main-content {
  flex-grow: 1;
}
/* Hero section */

.hero {
  padding-top: 100px;
  padding-bottom: 250px;
  background-image: url(/img/hero-circle-red.svg),
    url(/img/hero-circle-dark.svg);
  background-repeat: no-repeat no-repeat;
  background-position: bottom -25% right calc(50% - 400px),
    left calc(50% - 700px) top 100px;
}
.hero-inner {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  position: relative;
}
.hero-left {
  max-width: 635px;
  margin-right: 30px;
}
.hero-heading {
  margin: 0;
}
.spotted-text {
  color: var(--primary-light-coral);
}
.hero-right {
  max-width: 445px;
}
.hero-right::before {
  content: " ";
  width: 50px;
  height: 4px;
  background-color: var(--secondary-repture-blue);
  display: flex;
  position: absolute;
  top: 0;
}
.hero-text {
  margin: 0;
}

/* Features section */
.features {
  padding-top: 140px;
  padding-bottom: 140px;
  background-color: var(--secondary-secramento-state-green);
  background-image: url(/img//clients-circle.svg);
  background-repeat: no-repeat;
  background-position: bottom right calc(50% - 700px);
}
.features-inner {
  display: flex;
  position: relative;
}
.features-left-side {
  width: 445px;
  margin-right: 125px;
}
.features-left-side::before {
  content: " ";
  width: 50px;
  height: 4px;
  background-color: var(--primary-light-coral);
  display: flex;
  position: absolute;
  top: -54px;
}
.features-heading {
  margin: 0;
}
.features-box-wrapper {
  padding: 0;
  margin: 0;
  list-style: none;
  display: flex;
  flex-direction: column;
}
.feature-box {
  width: 540px;
  display: flex;
  align-items: flex-start;
}
.feature-box:not(:last-child) {
  margin-bottom: 32px;
}
.feature-img {
  display: block;
  width: 72px;
  height: 72px;
  margin-right: 23px;
}
.feature-heading {
  margin: 0;
  margin-bottom: 16px;
  color: var(--primary-light-coral);
}
.feature-paragraph {
  margin: 0;
  opacity: 0.8;
}
/* ... */

